--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mesto",
+  "homepage": "https://oxtopus501.github.io/mesto",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
@@ -17,7 +18,6 @@
   "bugs": {
     "url": "https://github.com/Oxtopus501/mesto/issues"
   },
-  "homepage": "https://github.com/Oxtopus501/mesto#readme",
   "devDependencies": {
     "@babel/cli": "^7.10.4",
     "@babel/core": "^7.10.4",
@@ -28,6 +28,7 @@
     "css-loader": "^3.6.0",
     "cssnano": "^4.1.10",
     "file-loader": "^6.0.0",
+    "gh-pages": "^2.2.0",
     "html-webpack-plugin": "^4.3.0",
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
